--- a/todo.txt
+++ b/todo.txt
@@ -98,6 +98,7 @@ Repos
   [ ] Make update template button update Repo state
   [ ] Pagination???
 [ ] Switch repos
+[ ] Database seeding?
 Repos
 [ ] View repos
 [ ] Create repos
